crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__query_index_values__query_index_values_sequence_all_valid_index_values_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/query_index_values.rs
expression: results.format_schema_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/my/entity:example.MyPoints:colors: List(UInt32) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:entity_path: "/my/entity"
    rerun:kind: "data"
]
/my/entity:example.MyPoints:labels: List(Utf8) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:labels"
    rerun:component_type: "example.MyLabel"
    rerun:entity_path: "/my/entity"
    rerun:is_static: "true"
    rerun:kind: "data"
]
/my/entity:example.MyPoints:points: List(Struct("x": non-null Float32, "y": non-null Float32)) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:entity_path: "/my/entity"
    rerun:kind: "data"
]
frame_nr: Int64 [
    rerun:index_name: "frame_nr"
    rerun:kind: "index"
]
rerun_segment_id: non-null Utf8
