crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__query_index_values__query_index_values_sequence_single_segment_data.snap
---
source: crates/store/dl_redap_tests/src/tests/query_index_values.rs
expression: filtered_results.format_snapshot(false)
---
┌────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┬──────────┬──────────────────┐
│ /my/entity:example.MyPoints:colors ┆ /my/entity:example.MyPoints:labels ┆ /my/entity:example.MyPoints:points ┆ frame_nr ┆ rerun_segment_id │
╞════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╪══════════╪══════════════════╡
│ [1]                                ┆ [simple]                           ┆ [{x: 1.0, y: 1.0}]                 ┆ 1020     ┆ my_segment_id1   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [3]                                ┆ [simple]                           ┆ [{x: 3.0, y: 3.0}]                 ┆ 1040     ┆ my_segment_id1   │
└────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┴──────────┴──────────────────┘
