crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__query_index_values__query_index_values_timestamp_all_valid_index_values_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/query_index_values.rs
expression: results.format_schema_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/my/entity:example.MyPoints:colors: List(UInt32) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:colors"
    dalaran:component_type: "example.MyColor"
    dalaran:entity_path: "/my/entity"
    dalaran:kind: "data"
]
/my/entity:example.MyPoints:labels: List(Utf8) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:labels"
    dalaran:component_type: "example.MyLabel"
    dalaran:entity_path: "/my/entity"
    dalaran:is_static: "true"
    dalaran:kind: "data"
]
/my/entity:example.MyPoints:points: List(Struct("x": non-null Float32, "y": non-null Float32)) [
    dalaran:archetype: "example.MyPoints"
    dalaran:component: "example.MyPoints:points"
    dalaran:component_type: "example.MyPoint"
    dalaran:entity_path: "/my/entity"
    dalaran:kind: "data"
]
dalaran_segment_id: non-null Utf8
timestamp: Timestamp(ns) [
    dalaran:index_name: "timestamp"
    dalaran:kind: "index"
]
