crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__query_index_values__query_index_values_timestamp_unknown_segment_data.snap
---
source: crates/store/dl_redap_tests/src/tests/query_index_values.rs
expression: filtered_results.format_snapshot(false)
---
┌────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┬──────────────────┬───────────┐
│ /my/entity:example.MyPoints:colors ┆ /my/entity:example.MyPoints:labels ┆ /my/entity:example.MyPoints:points ┆ dalaran_segment_id ┆ timestamp │
╞════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╪══════════════════╪═══════════╡
└────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┴──────────────────┴───────────┘
